IT XML assets from LSO

--- a/l10n/ses/it-it/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_gateway.xml
@@ -2149,7 +2149,7 @@ number_of_objects_expected_in_a_bucket / 100000
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>radosgw-admin realm create --rgw-realm=gold --default</screen>
     <para>
-     Se il cluster dispone di un dominio singolo, specificare il flag <option>--default</option>. Se il flag <option>--default</option> è specificato, <command>radosgw-admin</command> utilizza per default questo dominio. Se il flag <option>--default</option> non è specificato, per aggiungere gruppi di zone e zone occorre specificare i flag <option>--rgw-realm</option> o <option>--realm-id</option> per identificare il dominio durante l&apos;aggiunta di gruppi di zone e zone.
+     Se il cluster dispone di un dominio singolo, specificare il flag <option>--default</option>. Se il flag <option>--default</option> è specificato, <command>radosgw-admin</command> utilizza per default questo dominio. Se il flag <option>--default</option> non è specificato, per aggiungere gruppi di zone e zone occorre specificare i flag <option>--rgw-realm</option> o <option>‑‑realm-id</option> per identificare il dominio durante l&apos;aggiunta di gruppi di zone e zone.
     </para>
     <para>
      In seguito alla creazione del dominio, <command>radosgw-admin</command> ne restituisce la configurazione:
@@ -2636,7 +2636,7 @@ data sync source: 341c2d81-4574-4d08-ab0f-5a2a7b168028 (us-east)
       <term>Partizionamenti di ripristino</term>
       <listitem>
        <para>
-        I partizionamenti di ripristino sono quelli contrassegnati per un nuovo tentativo, poiché con un errore durante la sincronizzazione. L&apos;errore riguarda principalmente problemi minori, come l&apos;acquisizione di un blocco su un compartimento, e in genere si risolve da sé.
+        I partizionamenti di ripristino sono quelli contrassegnati per un nuovo tentativo, poiché presentano un errore durante la sincronizzazione. L&apos;errore riguarda principalmente problemi minori, come l&apos;acquisizione di un blocco su un compartimento, e in genere si risolve da sé.
        </para>
       </listitem>
      </varlistentry>
