--- a/l10n/ses/it-it/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_iscsi.xml
@@ -164,7 +164,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
    <procedure>
     <step>
      <para>
-      Aprire Windows Server Manager. Da Dashboard, selezionare <menuchoice><guimenu>Tools (Strumenti)</guimenu><guimenu>iSCSI Initiator (Iniziatore iSCSI)</guimenu></menuchoice>. Viene visualizzata la finestra di dialogo <guimenu>iSCSI Initiator Properties (Proprietà iniziatore iSCSI)</guimenu>. Selezionare la scheda <guimenu>Rilevazione</guimenu>:
+      Aprire Windows Server Manager. Da Dashboard, selezionare <menuchoice><guimenu>Strumenti</guimenu><guimenu>Iniziatore iSCSI</guimenu></menuchoice>. Viene visualizzata la finestra di dialogo <guimenu>Proprietà iniziatore iSCSI</guimenu>. Selezionare la scheda <guimenu>Rilevazione</guimenu>:
      </para>
      <figure>
       <title>Proprietà iniziatore iSCSI</title>
@@ -180,7 +180,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Nella finestra di dialogo <guimenu>Discover Target Portal (Rileva portale di destinazione)</guimenu> immettere il nome host o l&apos;indirizzo IP della destinazione nel campo <guimenu>Target (Destinazione)</guimenu>, quindi fare clic su <guimenu>OK</guimenu>:
+      Nella finestra di dialogo <guimenu>Individua portale destinazione</guimenu> immettere il nome host o l&apos;indirizzo IP della destinazione nel campo <guimenu>Destinazione</guimenu>, quindi fare clic su <guimenu>OK</guimenu>:
      </para>
      <figure>
       <title>Rilevazione portale di destinazione</title>
@@ -228,12 +228,12 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Fare clic su <guimenu>Esegui connessione</guimenu> nella scheda <guimenu>Destinazioni</guimenu>. Viene visualizzata la finestra di dialogo <guimenu>Connect To Target (Connetti a destinazione)</guimenu>. Selezionare la casella di controllo <guimenu>Enable Multi-path (Abilita multipath)</guimenu> per abilitare I/O multipath (MPIO), quindi fare clic su <guimenu>OK</guimenu>:
+      Fare clic su <guimenu>Esegui connessione</guimenu> nella scheda <guimenu>Destinazioni</guimenu>. Viene visualizzata la finestra di dialogo <guimenu>Connessione alla destinazione</guimenu>. Selezionare la casella di controllo <guimenu>Consenti percorsi multipli</guimenu> per abilitare I/O multipath (MPIO), quindi fare clic su <guimenu>OK</guimenu>:
      </para>
     </step>
     <step>
      <para>
-      Quando si chiude la finestra di dialogo <guimenu>Connect to Target (Connetti a destinazione)</guimenu>, selezionare <guimenu>Properties (Proprietà)</guimenu> per rivedere le proprietà della destinazione:
+      Quando si chiude la finestra di dialogo <guimenu>Connessione alla destinazione</guimenu>, selezionare <guimenu>Proprietà</guimenu> per rivedere le proprietà della destinazione:
      </para>
      <figure>
       <title>Proprietà destinazione iSCSI</title>
@@ -268,15 +268,15 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
    </procedure>
    <para>
-    In tal modo si conclude la configurazione dell&apos;iniziatore iSCSI. I volumi iSCSI adesso sono disponibili come qualsiasi altro dispositivo SCSI ed è possibile inizializzarli per utilizzarli come volumi e unità. Fare clic su <guimenu>OK</guimenu> per chiudere la finestra di dialogo <guimenu>iSCSI Initiator Properties (Proprietà iniziatore iSCSI)</guimenu> e continuare con il ruolo<guimenu> File and Storage Services (Servizi file e memorizzazione)</guimenu> nel dashboard di <guimenu>Server Manager</guimenu>.
+    In tal modo si conclude la configurazione dell&apos;iniziatore iSCSI. I volumi iSCSI adesso sono disponibili come qualsiasi altro dispositivo SCSI ed è possibile inizializzarli per utilizzarli come volumi e unità. Fare clic su <guimenu>OK</guimenu> per chiudere la finestra di dialogo <guimenu>Proprietà iniziatore iSCSI</guimenu> e continuare con il ruolo<guimenu> Servizi file e archiviazione</guimenu> nel dashboard di <guimenu>Server Manager</guimenu>.
    </para>
    <para>
-    Osservare il volume appena connesso. Viene identificato come <emphasis>SUSE RBD SCSI Multi-Path Drive (Unità multipath SCSI RBD SUSE)</emphasis> sul bus iSCSI e inizialmente è contrassegnato con lo stato <emphasis>Offline</emphasis> e un tipo di tabella delle partizioni <emphasis>Unknown (Sconosciuta)</emphasis>. Se il nuovo volume non viene visualizzato immediatamente, selezionare <guimenu>Rescan Storage (Effettua di nuovo scansione memorizzazione)</guimenu> dalla casella di riepilogo <guimenu>Tasks (Task)</guimenu> per effettuare di nuovo la scansione del bus iSCSI.
+    Osservare il volume appena connesso. Viene identificato come <emphasis>SUSE RBD SCSI Multi-Path Drive (Unità multipath SCSI RBD SUSE)</emphasis> sul bus iSCSI e inizialmente è contrassegnato con lo stato <emphasis>Offline</emphasis> e un tipo di tabella delle partizioni <emphasis>Sconosciuto</emphasis>. Se il nuovo volume non viene visualizzato immediatamente, selezionare <guimenu>Nuova analisi archiviazione</guimenu> dalla casella di riepilogo <guimenu>Tasks</guimenu> per effettuare di nuovo la scansione del bus iSCSI.
    </para>
    <procedure>
     <step>
      <para>
-      Fare clic con il pulsante destro del mouse sul volume iSCSI e selezionare <guimenu>New Volume (Nuovo volume)</guimenu> dal menu di scelta rapida. Viene visualizzata la <guimenu>New Volume Wizard (Procedura guidata per il nuovo volume)</guimenu>. Fare clic su <guimenu>Avanti</guimenu>, evidenziare il volume iSCSI appena connesso e fare clic su <guimenu>Avanti</guimenu> per iniziare.
+      Fare clic con il pulsante destro del mouse sul volume iSCSI e selezionare <guimenu>Nuovo volume</guimenu> dal menu di scelta rapida. Viene visualizzata la <guimenu>Creazione guidata nuovo volume</guimenu>. Fare clic su <guimenu>Avanti</guimenu>, evidenziare il volume iSCSI appena connesso e fare clic su <guimenu>Avanti</guimenu> per iniziare.
      </para>
      <figure>
       <title>Procedura guidata per il nuovo volume</title>
