--- a/l10n/ses/it-it/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_upgrade.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_upgrade.xml" version="5.0" xml:id="cha-ceph-upgrade">
- <title>Eseguire l&apos;upgrade da SUSE Enterprise Storage 6 a 7.1</title>
+ <title>Upgrade da SUSE Enterprise Storage 6 a 7.1</title>
  <info>
   <dm:docmanager xmlns:dm="urn:x-suse:ns:docmanager">
    <dm:translation>yes</dm:translation>
@@ -99,7 +99,7 @@
     </listitem>
     <listitem>
      <para>
-      Leggere il <xref linkend="ses-deployment"/> per acquisire dimestichezza con <systemitem class="resource">ceph-salt</systemitem> e con l&apos;utilità di coordinamento Ceph, in particolare con le informazioni sulle specifiche del servizio.
+      Leggere la <xref linkend="ses-deployment"/> per acquisire dimestichezza con <systemitem class="resource">ceph-salt</systemitem> e con l&apos;utilità di coordinamento Ceph, in particolare con le informazioni sulle specifiche del servizio.
      </para>
     </listitem>
     <listitem>
@@ -215,7 +215,7 @@
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos">
     <title>Archivi software</title>
     <para>
-     Se tutti i nodi sono registrati su SCC, sarà possibile eseguire l&apos;upgrade con il comando <command>zypper migration</command>. Per ulteriori dettagli, fare riferimento alla pagina all&apos;indirizzo <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
+     Se tutti i nodi sono registrati su SCC, sarà possibile eseguire l&apos;upgrade con il comando <command>zypper migration</command>. Per ulteriori dettagli, fare riferimento a <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
     </para>
     <para>
      Se i nodi <emphasis role="bold">non</emphasis> sono registrati su SCC, disabilitare tutti gli archivi software esistenti e aggiungere gli archivi <literal>Pool</literal> e <literal>Updates</literal> per ciascuna delle estensioni seguenti:
@@ -399,7 +399,7 @@ Nodes running older software versions must be upgraded in the following order:
     </para>
     <note>
      <para>
-      La conversione può richiedere un tempo variabile da minuti a ore, a seconda della quantità di dati OMAP contenuti nel relativo disco rigido. Per ulteriori informazioni, fare riferimento alla <link xlink:href="https://docs.ceph.com/en/latest/releases/pacific/#upgrading-non-cephadm-clusters"/>.
+      La conversione può richiedere un tempo variabile da minuti a ore, a seconda della quantità di dati OMAP contenuti nel relativo disco rigido. Per ulteriori informazioni, fare riferimento al <link xlink:href="https://docs.ceph.com/en/latest/releases/pacific/#upgrading-non-cephadm-clusters"/>.
      </para>
     </note>
    </step>
@@ -668,7 +668,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
 <screen><prompt>cephuser@adm &gt; </prompt>ceph orch apply -i specs.yaml</screen>
     <tip>
      <para>
-      Se <emphasis role="bold">non</emphasis> è in esecuzione il registro delle immagini del container di default <literal>registry.suse.com</literal>, ma un registro del container locale, prima di distribuire il node-exporter, configurare cephadm in modo che utilizzi l&apos;immagine del contenitore dal registro locale per la distribuzione del node-exporter. Diversamente, è possibile saltare questo passaggio e ignorare l&apos;avviso successivo.
+      Se <emphasis role="bold">non</emphasis> è in esecuzione il registro delle immagini del container di default <literal>registry.suse.com</literal>, ma un registro del container locale, prima di distribuire il node-exporter, configurare cephadm in modo che utilizzi l&apos;immagine del container dal registro locale per la distribuzione del node-exporter. Diversamente, è possibile saltare questo passaggio e ignorare l&apos;avviso successivo.
      </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph config set mgr mgr/cephadm/container_image_node_exporter <replaceable>QUALIFIED_IMAGE_PATH</replaceable></screen>
      <para>
@@ -678,7 +678,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
       In caso contrario, le nuove distribuzioni dei servizi di monitoraggio, nonché le ridistribuzioni, utilizzeranno la configurazione cephadm di default ed è possibile che non si sia in grado di distribuire i servizi (nel caso di distribuzioni con air gap) o che si distribuiscano servizi con versioni miste.
      </para>
      <para>
-      La modalità con cui cephadm deve essere configurato per utilizzare le immagini del container provenienti dal registro locale è descritta in <xref linkend="monitoring-custom-images"/>.
+      La modalità con cui cephadm deve essere configurato per utilizzare le immagini del container provenienti dal registro locale è descritta nel <xref linkend="monitoring-custom-images"/>.
      </para>
     </tip>
    </step>
@@ -766,7 +766,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
    
 <important>
  <para>
-  NFS Ganesha supporta NFS versione 4.1 e versioni successive. Non supporta NFS versione 3.
+  NFS Ganesha supporta NFS versione 4.1 e versioni successive. Non supporta NFS versione 3.
  </para>
 </important>
 
