--- a/l10n/ses/it-it/xml/admin_ds_backup.xml
+++ b/l10n/ses/it-it/xml/admin_ds_backup.xml
@@ -138,7 +138,7 @@
    </listitem>
    <listitem>
     <para>
-     Importare la configurazione del cluster dal file JSON esportato in precedenza. Per ulteriori dettagli, fare riferimento al <xref linkend="deploy-cephadm-configure-export"/>.
+     Importare la configurazione del cluster dal file JSON esportato in precedenza. Per ulteriori dettagli, fare riferimento a <xref linkend="deploy-cephadm-configure-export"/>.
     </para>
    </listitem>
    <listitem>
