--- a/l10n/ses/it-it/xml/admin_monitoring_alerting.xml
+++ b/l10n/ses/it-it/xml/admin_monitoring_alerting.xml
@@ -45,7 +45,7 @@
   Per default, il traffico verso Grafana è cifrato tramite TLS. È possibile specificare un proprio certificato TLS o utilizzarne uno autofirmato. Se prima della distribuzione di Grafana non è stato configurato nessun certificato personalizzato, ne verrà creato e configurato automaticamente uno autofirmato per Grafana.
  </para>
  <para>
-  È possibile configurare i certificati personalizzati per Grafana seguendo la procedura di seguito indicata:
+  È possibile configurare i certificati personalizzati per Grafana seguendo la procedura indicata di seguito:
  </para>
  <procedure>
   <step>
@@ -65,7 +65,7 @@
   </step>
   <step>
    <para>
-    Riconfigurare il servizio Grafana in modo che riflette i nuovi percorsi del certificato e impostare l&apos;URL corretto per Ceph Dashboard:
+    Riconfigurare il servizio Grafana in modo che rifletta i nuovi percorsi del certificato e impostare l&apos;URL corretto per Ceph Dashboard:
    </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph orch reconfig grafana</screen>
   </step>
@@ -398,7 +398,7 @@ spec:
 </screen>
 
   <para>
-   In alternativa, è possibile utilizzare il Ceph Dashboard per distribuire il servizio del gateway SNMP per SNMPv2c e SNMPv3. Per ulteriori informazioni, fare riferimento alla <xref linkend="dashboard-cluster-services"/>.
+   In alternativa, è possibile utilizzare il Ceph Dashboard per distribuire il servizio del gateway SNMP per SNMPv2c e SNMPv3. Per ulteriori informazioni, fare riferimento al <xref linkend="dashboard-cluster-services"/>.
   </para>
  </sect1>
 </chapter>
