--- a/l10n/ses/it-it/xml/admin_nfsganesha.xml
+++ b/l10n/ses/it-it/xml/admin_nfsganesha.xml
@@ -75,7 +75,7 @@
 
   <important>
    <para>
-    L&apos;avvio del servizio NFS Ganesha non esporta automaticamente un file system CephFS. Per esportare un file system CephFS, creare un file di configurazione di esportazione. Per ulteriori dettagli, fare riferimento alla <xref linkend="ceph-nfsganesha-create-export"/>.
+    L&apos;avvio del servizio NFS Ganesha non esporta automaticamente un file system CephFS. Per esportare un file system CephFS, creare un file di configurazione di esportazione. Per ulteriori dettagli, fare riferimento a <xref linkend="ceph-nfsganesha-create-export"/>.
    </para>
   </important>
 
