--- a/l10n/ses/it-it/xml/admin_saltcluster.xml
+++ b/l10n/ses/it-it/xml/admin_saltcluster.xml
@@ -113,7 +113,7 @@ ses-min5.example.com   ses-min5.example.com
   <procedure xml:id="removing-node">
    <step>
     <para>
-     Per tutti i tipi di servizio Ceph, ad eccezione di <literal>node-exporter</literal> e <literal>crash</literal>, rimuovere il nome host del nodo dal file della specifica del posizionamento del cluster (ad esempio <filename>cluster.yml</filename>). Per ulteriori dettagli, fare riferimento al <xref linkend="cephadm-service-and-placement-specs"/>. Ad esempio, se si sta rimuovendo l&apos;host denominato <literal>ses-min2</literal>, rimuovere tutte le occorrenze di <literal>ses-min-2</literal> da tutte le sezioni <literal>placement:</literal>:
+     Per tutti i tipi di servizio Ceph, ad eccezione di <literal>node-exporter</literal> e <literal>crash</literal>, rimuovere il nome host del nodo dal file della specifica del posizionamento del cluster (ad esempio <filename>cluster.yml</filename>). Per ulteriori dettagli, fare riferimento a <xref linkend="cephadm-service-and-placement-specs"/>. Ad esempio, se si sta rimuovendo l&apos;host denominato <literal>ses-min2</literal>, rimuovere tutte le occorrenze di <literal>ses-min-2</literal> da tutte le sezioni <literal>placement:</literal>:
     </para>
     <para>
      Aggiornare
@@ -1114,7 +1114,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
 <screen><prompt>cephuser@adm &gt; </prompt>ceph osd deep-scrub osd.<replaceable>OSD_NUMBER</replaceable></screen>
    </note>
    <important>
-    <title>Errore di un dispositivo condiviso</title>
+    <title>errore di un dispositivo condiviso</title>
     <para>
      In caso di errore di un dispositivo condiviso per DB/WAL, eseguire la procedura di sostituzione per tutti gli OSD che condividono il dispositivo in errore.
     </para>
