--- a/l10n/ses/it-it/xml/dashboard_webui.xml
+++ b/l10n/ses/it-it/xml/dashboard_webui.xml
@@ -42,7 +42,7 @@
   <tip>
    <title>account utente personalizzato</title>
    <para>
-    Se non si desidera utilizzare l&apos;account <emphasis>admin</emphasis> di default per accedere al Ceph Dashboard, creare un account utente personalizzato con privilegi di amministratore. Per ulteriori dettagli, fare riferimento alla <xref linkend="dashboard-user-roles"/>.
+    Se non si desidera utilizzare l&apos;account <emphasis>admin</emphasis> di default per accedere al Ceph Dashboard, creare un account utente personalizzato con privilegi di amministratore. Per ulteriori dettagli, fare riferimento a <xref linkend="dashboard-user-roles"/>.
    </para>
   </tip>
 
