--- a/l10n/ses/it-it/xml/deploy_bootstrap.xml
+++ b/l10n/ses/it-it/xml/deploy_bootstrap.xml
@@ -538,7 +538,7 @@ podman run --name myregistry -p <option>REG_HOST_PORT</option>:5000 \
      </step>
      <step>
       <para>
-       Dopo aver creato il registro locale, è necessario sincronizzare le immagini del container dal registro ufficiale SUSE, disponibile all&apos;indirizzo <literal>registry.suse.com</literal> a quello locale. A tale scopo, è possibile utilizzare il comando <command>skopeo sync</command> disponibile nel pacchetto <package>skopeo</package>. Per ulteriori dettagli, fare riferimento alla documentazione (<command>man 1 skopeo-sync</command>). Si considerino i seguenti esempi:
+       Dopo aver creato il registro locale, è necessario sincronizzare le immagini del container dal registro ufficiale SUSE, disponibile all&apos;indirizzo <literal>registry.suse.com</literal> con quello locale. A tale scopo, è possibile utilizzare il comando <command>skopeo sync</command> disponibile nel pacchetto <package>skopeo</package>. Per ulteriori dettagli, fare riferimento alla documentazione (<command>man 1 skopeo-sync</command>). Si considerino i seguenti esempi:
       </para>
       <example>
        <title>visualizzazione dei file manifest</title>
@@ -557,7 +557,7 @@ skopeo inspect docker://registry.suse.com/ses/7.1/ceph/prometheus-alertmanager:0
        </para>
 <screen>skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/ceph /root/images/</screen>
        <para>
-        Sincronizzare le sole immagini più recenti:
+        Sincronizzare solo le immagini più recenti:
        </para>
 <screen>skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/ceph:latest /root/images/</screen>
       </example>
@@ -565,7 +565,7 @@ skopeo inspect docker://registry.suse.com/ses/7.1/ceph/prometheus-alertmanager:0
        <title>sincronizzazione delle immagini Grafana:</title>
 <screen>skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/grafana /root/images/</screen>
        <para>
-        Sincronizzare le sole immagini Grafana più recenti:
+        Sincronizzare solo le immagini Grafana più recenti:
        </para>
 <screen>skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/grafana:latest /root/images/</screen>
       </example>
@@ -623,7 +623,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
       </step>
       <step>
        <para>
-        Modificare il file appena copiato e aggiungi l&apos;impostazione <option>http_proxy</option> alla rispettiva sezione <literal>[engine]</literal>; ad esempio:
+        Modificare il file appena copiato e aggiungere l&apos;impostazione <option>http_proxy</option> alla rispettiva sezione <literal>[engine]</literal>; ad esempio:
        </para>
 <screen><prompt>&gt; </prompt>cat /etc/containers/containers.conf
  [engine]
@@ -763,7 +763,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
     </para>
    </note>
    <para>
-    Per <emphasis>forzare la modalità</emphasis> <literal> secure</literal>, eseguire i comandi seguenti:
+    Per <emphasis>forzare</emphasis> <literal>la modalità secure,</literal> eseguire i comandi seguenti:
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_cluster_mode secure
 <prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_service_mode secure
