--- a/l10n/ses/it-it/xml/deploy_core.xml
+++ b/l10n/ses/it-it/xml/deploy_core.xml
@@ -61,7 +61,7 @@ mon       1/0  5m ago     -    &lt;no spec&gt;  registry.example.com/[...]  5bf1
 </screen>
    <tip>
     <para>
-     Con il parametro facoltativo <option>-–host</option>, è possibile limitare l&apos;elenco ai servizi che si trovano su un determinato nodo, mentre con il parametro facoltativo <option>--service-type</option>, è possibile limitarlo ai servizi di un determinato tipo. I tipi accettabili sono <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
+     Con il parametro facoltativo <option>--host</option>, è possibile limitare l&apos;elenco ai servizi che si trovano su un determinato nodo, mentre con il parametro facoltativo <option>--service-type</option>, è possibile limitarlo ai servizi di un determinato tipo. I tipi accettabili sono <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
     </para>
    </tip>
    <para>
@@ -157,7 +157,7 @@ placement:
      <term><literal>placement</literal></term>
      <listitem>
       <para>
-       Specifica quali nodi eseguiranno il servizio. Per ulteriori dettagli, fare riferimento alla <xref linkend="cephadm-placement-specs"/>.
+       Specifica quali nodi eseguiranno il servizio. Per ulteriori dettagli, fare riferimento a <xref linkend="cephadm-placement-specs"/>.
       </para>
      </listitem>
     </varlistentry>
@@ -472,7 +472,7 @@ spec:
      </para>
      <note>
       <para>
-       I comandi della procedura utilizzano i valori <literal>di default</literal> per dominio e zona.
+       I comandi della procedura utilizzano i valori di <literal>default</literal> per dominio e zona.
       </para>
      </note>
      <procedure>
@@ -623,7 +623,7 @@ spec:
     
 <important>
  <para>
-  NFS Ganesha supporta NFS versione 4.1 e versioni successive. Non supporta NFS versione 3.
+  NFS Ganesha supporta NFS versione 4.1 e versioni successive. Non supporta NFS versione 3.
  </para>
 </important>
 
