--- a/l10n/ses/it-it/xml/deployment_cifs.xml
+++ b/l10n/ses/it-it/xml/deployment_cifs.xml
@@ -195,7 +195,7 @@
     </step>
     <step>
      <para>
-      La configurazione SLE ad elevata disponibilità richiede un dispositivo di isolamento per evitare una situazione <emphasis>split-brain</emphasis> quando i nodi del cluster attivi non sono più sincronizzati. A questo scopo, è possibile utilizzare un&apos;immagine RBD Ceph con il dispositivo di blocco Stonith (SBD, Stonith Block Device). Per ulteriori dettagli, fare riferimento alla <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>.
+      La configurazione SLE ad elevata disponibilità richiede un dispositivo di isolamento per evitare una situazione <emphasis>split-brain</emphasis> quando i nodi del cluster attivi non sono più sincronizzati. A questo scopo, è possibile utilizzare un&apos;immagine RBD Ceph con il dispositivo di blocco Stonith (SBD, Stonith Block Device). Per ulteriori dettagli, fare riferimento a <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>.
      </para>
      <para>
       Se non è ancora esistente, creare un pool RBD denominato <literal>rbd</literal> (vedere la <xref linkend="ceph-pools-operate-add-pool"/>) e associarlo a <literal>rbd</literal> (vedere la <xref linkend="ceph-pools-associate"/>). Quindi, creare un&apos;immagine RBD correlata chiamata <literal>sbd01</literal>:
