--- a/l10n/ses/it-it/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/it-it/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        Riavviare gli OSD per eseguire l&apos;associazione alla rete di cluster specificata:
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
      </step>
      <step>
       <para>
@@ -468,7 +468,7 @@
    <itemizedlist>
     <listitem>
      <para>
-      Si consiglia di prenotare 4 GB per il dispositivo WAL. Sebbene la dimensione minima del DB sia 64 GB per i workload solo RBD, quella consigliata per i workload di Object Gateway e CephFS è il 2% della capacità del dispositivo principale (ma almeno 196 GB).
+      Si consiglia di riservare 4 GB per il dispositivo WAL. Sebbene la dimensione minima del DB sia 64 GB per i workload solo RBD, quella consigliata per i workload di Object Gateway e CephFS è il 2% della capacità del dispositivo principale (ma almeno 196 GB).
      </para>
      <important>
       <para>
