--- a/l10n/ses/it-it/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_datamgm.xml
@@ -1286,7 +1286,7 @@ osdmap e13 pg 1.6c (1.6c) -&gt; up [1,0] acting [1,0]
    <tip>
     <title>test della nuova mappa CRUSH</title>
     <para>
-     Testare la nuova mappa CRUSH modificata tramite il comando <command>crushtool --test</command> e confrontarla con lo stato prima di applicarla. Le seguenti opzioni di comando potrebbero risultare utili: <option>--show-statistics</option>, <option>--show-mappings</option>, <option>--show-bad-mappings</option>, <option>--show-utilization</option>, <option>--show-utilization-all</option>, <option>--show-choose-tries</option>
+     Testare la nuova mappa CRUSH modificata tramite il comando <command>crushtool --test</command> e confrontarla con lo stato prima di applicarla. Le seguenti opzioni di comando potrebbero risultare utili: <option>--show-statistics</option>, <option>--show-mappings</option>, <option>--show-bad-mappings</option>, <option>‑‑show-utilization</option>, <option>--show-utilization-all</option>, <option>--show-choose-tries</option>
     </para>
    </tip>
   </sect2>
