--- a/l10n/ses/it-it/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/it-it/xml/upgrade-to-pacific.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="upgrade-to-pacific.xml" version="5.0" xml:id="upgrade-to-pacific">
- <title>Eseguire l&apos;upgrade da SUSE Enterprise Storage 7 a 7.1</title>
+ <title>Upgrade da SUSE Enterprise Storage 7 a 7.1</title>
  <info>
   <dm:docmanager xmlns:dm="urn:x-suse:ns:docmanager">
    <dm:translation>yes</dm:translation>
@@ -71,7 +71,7 @@
     </listitem>
     <listitem>
      <para>
-      Leggere il <xref linkend="ses-deployment"/> per acquisire dimestichezza con <systemitem class="resource">ceph-salt</systemitem> e con l&apos;utilità di coordinamento Ceph, in particolare con le informazioni sulle specifiche del servizio.
+      Leggere la <xref linkend="ses-deployment"/> per acquisire dimestichezza con <systemitem class="resource">ceph-salt</systemitem> e con l&apos;utilità di coordinamento Ceph, in particolare con le informazioni sulle specifiche del servizio.
      </para>
     </listitem>
    </itemizedlist>
@@ -92,7 +92,7 @@
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos-7p">
     <title>Archivi software</title>
     <para>
-     Se tutti i nodi sono registrati su SCC, sarà possibile eseguire l&apos;upgrade con il comando <command>zypper migration</command>. Per ulteriori dettagli, fare riferimento alla <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
+     Se tutti i nodi sono registrati su SCC, sarà possibile eseguire l&apos;upgrade con il comando <command>zypper migration</command>. Per ulteriori dettagli, fare riferimento a <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
     </para>
     <para>
      Se i nodi <emphasis role="bold">non</emphasis> sono registrati su SCC, disabilitare tutti gli archivi software esistenti e aggiungere gli archivi <literal>Pool</literal> e <literal>Updates</literal> per ciascuna delle estensioni seguenti:
@@ -177,7 +177,7 @@
   <title>Aggiornamento dei pacchetti relativi a SUSE Enterprise Storage su ciascun nodo del cluster</title>
 
   <para>
-   Per aggiornare i pacchetti SUSE Enterprise Storage alla versione più recente, utilizzare il comando <command>ceph-salt update</command>. Per ulteriori informazioni, fare riferimento alla <xref linkend="cephadm-rolling-updates"/>.
+   Per aggiornare i pacchetti SUSE Enterprise Storage alla versione più recente, utilizzare il comando <command>ceph-salt update</command>. Per ulteriori informazioni, fare riferimento al <xref linkend="cephadm-rolling-updates"/>.
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-services">
