JA XML assets from LSO

--- a/l10n/ses/ja-jp/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/ja-jp/xml/admin_ceph_gateway.xml
@@ -186,7 +186,7 @@ sudo zypper refresh</screen>
 <screen><prompt>&gt; </prompt>swift -A http://<replaceable>IP_ADDRESS</replaceable>/auth/1.0 \
 -U example_user:swift -K '<replaceable>SWIFT_SECRET_KEY</replaceable>' list</screen>
     <para>
-     <replaceable>IP_ADDRESS</replaceable>は、ゲートウェイサーバのIPアドレスに置き換えてください。<replaceable>_SECRET_KEY</replaceable>は、<command>で</command>swiftユーザを対象に実行した<systemitem>swift</systemitem>radosgw-admin key create<xref linkend="adding-s3-swift-users"/>コマンドの出力の値に置き換えてください。
+     <replaceable>IP_ADDRESS</replaceable>は、ゲートウェイサーバのIPアドレスに置き換えてください。<replaceable>SWIFT_SECRET_KEY</replaceable>は、<xref linkend="adding-s3-swift-users"/>で<systemitem>swift</systemitem>ユーザを対象に実行した<command>radosgw-admin key create</command>コマンドの出力の値に置き換えてください。
     </para>
     <para>
      例:
