--- a/l10n/ses/ja-jp/xml/dashboard_users.xml
+++ b/l10n/ses/ja-jp/xml/dashboard_users.xml
@@ -17,14 +17,14 @@
   <title>ユーザの一覧</title>
 
   <para>
-   ページの右上隅にある［ユーザ管理<inlinemediaobject>
+   ユーティリティメニューの<inlinemediaobject>をクリックし、
    <imageobject role="fo">
     <imagedata fileref="dash_icon_gear.png" width="1.3em" format="PNG"/>
    </imageobject>
    <imageobject role="html">
     <imagedata fileref="dash_icon_gear.png" width="1.3em" format="PNG"/>
    </imageobject>
-   </inlinemediaobject>ユーティリティメニューのをクリックし、<guimenu>ユーザ管理</guimenu>を選択します。
+   </inlinemediaobject><guimenu>ユーザ管理</guimenu>を選択します。
   </para>
 
   <para>
@@ -91,7 +91,7 @@
    <imageobject role="html">
     <imagedata fileref="dash_icon_gear.png" width="1.3em" format="PNG"/>
    </imageobject>
-   </inlinemediaobject>ユーティリティメニューのをクリックし、<guimenu>ユーザ管理</guimenu>を選択します。続いて、<guimenu>役割</guimenu>タブをクリックします。
+   ユーティリティメニューの</inlinemediaobject>をクリックし、<guimenu>ユーザ管理</guimenu>を選択します。続いて、<guimenu>役割</guimenu>タブをクリックします。
   </para>
 
   <para>
