--- a/l10n/ses/ja-jp/xml/deploy_intro.xml
+++ b/l10n/ses/ja-jp/xml/deploy_intro.xml
@@ -15,12 +15,12 @@
    <term>ブートストラップクラスタの展開</term>
    <listitem>
     <para>
-     このフェーズは「1日目の展開」と呼ばれ、次のタスクで構成されます。基盤となるオペレーティングシステムのインストール、Saltインフラストラクチャの設定、および1つのMONサービスと1つのMGRサービスで構成される最小クラスタの展開が含まれます。<emphasis></emphasis>
+     このフェーズは「1日目の展開」と呼ばれ、次のタスクで構成されます。基礎となるオペレーティングシステムのインストール、Saltインフラストラクチャの設定、および1つのMONサービスと1つのMGRサービスで構成される最小クラスタの展開が含まれます。<emphasis></emphasis>
     </para>
     <itemizedlist>
      <listitem>
       <para>
-       すべてのクラスタノードで、ベースとなるオペレーティングシステム(SUSE Linux Enterprise Server 15 SP3)のインストールと基本的な設定を行います。
+       すべてのクラスタノードで、基礎となるオペレーティングシステム(SUSE Linux Enterprise Server 15 SP3)のインストールと基本的な設定を行います。
       </para>
      </listitem>
      <listitem>
