--- a/l10n/ses/ja-jp/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/ja-jp/xml/upgrade-to-pacific.xml
@@ -16,7 +16,7 @@
  <itemizedlist>
   <listitem>
    <para>
-    基盤となるSUSE Linux Enterprise Server SUSE Linux Enterprise Server 15 SP2からバージョンSUSE Linux Enterprise Server 15 SP3へのアップグレード。
+    基礎となるSUSE Linux Enterprise Server SUSE Linux Enterprise Server 15 SP2からバージョンSUSE Linux Enterprise Server 15 SP3へのアップグレード。
    </para>
   </listitem>
   <listitem>
